Refactor vacancy creation process: update logging configuration, handle null contact info, and improve entity timestamp management